Fixed background-color clipping issues for mobile view

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
   scroll-behavior: smooth;
 }
 
+body {
+  max-height: 100vh;
+  max-width: 100vw;
+  background-color:rgb(0, 0, 0);
+}
+
 header {
   color: rgb(255, 0, 0);
   -webkit-text-stroke: 1px rgb(255, 255, 0);
